using UnityEngine;
using Cinemachine;

public class CameraSystem : MonoBehaviour
{
    public CinemachineVirtualCamera virtualCamera; // Manages camera's position and lens
    public CinemachineConfiner confiner; // Restricts camera's movement within bounds
    [SerializeField] private InputManager inputManager; // Handles user input
    [SerializeField] private ZoomSettings zoomSettings;
    [SerializeField] private MovementSettings movementSettings;

    void Update()
    {
        UpdateCameraPosition();
        UpdateCameraZoom();
    }

    public void UpdateCameraPosition()
    {
        // Use inputManager to get movement input and apply it to the camera.
        // Leverage Cinemachine's smooth movement capabilities for isometric movement (Design Doc: Camera Movement).
        Vector3 movementInput = inputManager.GetMovementInput();
        // Implementation to move the virtualCamera using Cinemachine
    }

    public void UpdateCameraZoom()
    {
        // Use inputManager to get zoom input and apply it to the camera's FOV or Orthographic Size.
        // Adjust zoom within limits defined in zoomSettings (Design Doc: Camera Zoom).
        float zoomInput = inputManager.GetZoomInput();
        // Implementation to adjust zoom using Cinemachine
    }

    public void ApplyCameraBounds()
    {
        // Use confiner to apply bounds to the camera (Design Doc: Camera Bounds).
        // The confiner's bounding volume can be set to a Collider representing the bounds.
        // Implementation to apply bounds using Cinemachine
    }
}

[System.Serializable]
public class ZoomSettings
{
    public float minZoom;
    public float maxZoom;
    public float zoomSpeed;
}

[System.Serializable]
public class MovementSettings
{
    public AnimationCurve dampeningCurve;
    public bool isometricMovement; // If true, movement will be relative to the camera's orientation
}
